welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:4: error: Invalid literal number
	for(i<-1to4){
               ^MethodsDogHouse:11: error: ')' expected but '}' found.
}
^