welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
var i=0;
def dogHouse(){
	for(i<-1to4){
		avance()
		avance()
		gauche()
	}
	

}
